--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,25 +4,17 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="50dp">
-    <ImageView
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/img"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/flower"
-        android:layout_margin="5dp"
-        android:layout_gravity="center"/>
 
     <TextView
-        android:layout_toRightOf="@id/img"
         android:id="@+id/info_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="24sp"
-        android:layout_marginLeft="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:gravity="center_vertical"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/button"
